--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>房客電費小幫手</title>
+  <title>電費計算小幫手</title>
   <style>
     body {
       font-family: sans-serif;
@@ -57,7 +57,7 @@
   </style>
 </head>
 <body>
-  <h1>房客電費小幫手</h1>
+  <h1>電費計算小幫手</h1>
   <div class="mode-buttons">
     <button onclick="switchMode('tiered')">依台電費率計算</button>
     <button onclick="switchMode('flat')">平均單價計算</button>
